WebKit/win/WebPreferences.h
@@ -387,6 +387,9 @@ public:
     virtual HRESULT STDMETHODCALLTYPE setAcceleratedCompositingEnabled(BOOL);
     virtual HRESULT STDMETHODCALLTYPE acceleratedCompositingEnabled(BOOL*);
 
+    virtual HRESULT STDMETHODCALLTYPE setCustomDragCursorsEnabled(BOOL);
+    virtual HRESULT STDMETHODCALLTYPE customDragCursorsEnabled(BOOL*);
+
     // WebPreferences
 
     // This method accesses a different preference key than developerExtrasEnabled.
